Couldn't open Online accounts settings: Failed to create foreign window for XID 0
I have an nextcloud account added in my GNOME Settings, and it's shown in the online accounts. But clicking the row does nothing. I get the following warning logged into console (Running gnome-control-center as of current master on X11 in jhbuild env):
(gnome-control-center-goa-helper:234288): online-accounts-cc-panel-WARNING **: 18:52:25.808: Failed to create foreign window for XID 0
Gtk-Message: 18:52:26.575: Failed to load module "canberra-gtk-module"
Gtk-Message: 18:52:26.576: Failed to load module "canberra-gtk-module"
Edited by Andre Klapper