online-accounts: Fix goa-helper on X11

The handle_str contains the “x11:” prefix so strtol would return 0.
We need to pass it the numeric substring.

Fixes: https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/1651